Removes processingTime
